--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -259,8 +259,8 @@ h2.pane-title {
 	background-position:0 0;
 }
 .field-name-field-aside ul li:after, .field-name-field-aside ul li .after, .pane-ct-page-lc-section-nav li:after, .pane-ct-page-lc-section-nav li .after {
-	background-image:url("/sites/all/themes/lynchburg/images/circle_list.png");
-	background-repeat:no-repeat;
+	/*background-image:url("/sites/all/themes/lynchburg/images/circle_list.png");
+*/	background-repeat:no-repeat;
 	background-position:0 -30px;
 	position:absolute;
 	content:"";
