Commented out @font in global.css

--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1,10 +1,10 @@
-/* This file will hold the main styles for your website. */
-@font-face {
+﻿/* This file will hold the main styles for your website. */
+/*@font-face {
 	font-family: Arimo;
 	src: url("/sites/all/themes/lynchburg/fonts/Arimo.ttf");
 }
 
-
+*/
 
 /* ========== GENERAL STYLES ========== */
 body {
