--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1,14 +1,9 @@
 /* This file will hold the main styles for your website. */
-@font-face {
-	font-family: Arimo;
-	src: url("/sites/all/themes/lynchburg/fonts/Arimo.ttf");
-}
-
 
 
 /* ========== GENERAL STYLES ========== */
 body {
-	font-family:'Arimo', Arial, Helvetica, sans-serif;
+	font-family:Arial, Helvetica, sans-serif;
 	color:#6b6b6b;
 	/*padding:20px 30  20px 0px;*/
 	font-size:0.75em;
@@ -137,7 +132,7 @@ a, a:link, a:visited, a:focus {
 
 /* ========== HEADING STYLES ========== */
 h1, h2, h3, h4, h5, h6 {
-	font-family:'Arimo', Arial, Verdana, sans-serif;
+	font-family:Arial, Verdana, sans-serif;
 	font-weight:normal;
 	color:#242424;
 	margin-bottom:0.3em;
@@ -163,7 +158,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 /* ========== MAIN NAV ========== */
 
 .navigation, .navigation a, #main-menu {
-	font-family:'Arimo', Arial, Helvetica, sans-serif;
+	font-family:Arial, Helvetica, sans-serif;
 	font-size:1.083em;
 	padding-top:8px;
 	color:#454545;
@@ -173,9 +168,9 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 #megamenu-studentlife {margin-right:330px;}
 
 
-	
-	
-	
+
+
+
 
 /* ========== MAIN NAV DROPDOWN ========== */
 .qtip{border:none;}
@@ -197,11 +192,11 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	border:#dddedf solid 3px;
 }*/
 
-#mini-panel-undergraduate_megamenu, #mini-panel-graduate_megamenu, #mini-panel-student_life_megamenu, 
+#mini-panel-undergraduate_megamenu, #mini-panel-graduate_megamenu, #mini-panel-student_life_megamenu,
 #mini-panel-alumni_megamenu, #mini-panel-athletics_megamenu{
 	margin:20px;
 	line-height:14px;
-	font-size:1em;		
+	font-size:1em;
 }
 .menu-minipanels .pane-title, .pane-node-field-links .pane-title{
 	font-size:1.333em;
@@ -243,7 +238,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 .field-name-field-aside ul, .pane-ct-page-lc-section-nav .pane-content .item-list ul{
 	/*border-top:#c3c3c3  dotted 1.75px;*/
 	background:url("/sites/all/themes/lynchburg/images/square_divider.png") repeat-x top;
-} 
+}
 
 .field-name-field-aside ul li, .pane-ct-page-lc-section-nav .pane-content .item-list li {
 	background:url("/sites/all/themes/lynchburg/images/square_divider.png") repeat-x bottom;
@@ -252,11 +247,11 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	position:relative;
 	list-style:none;
 	margin:0;
-} 
+}
 
 .field-name-field-aside ul li:after,
 .field-name-field-aside ul li .after,
-.pane-ct-page-lc-section-nav .pane-content .item-list li:after,  
+.pane-ct-page-lc-section-nav .pane-content .item-list li:after,
 .pane-ct-page-lc-section-nav .pane-content .item-list li .after{
 	background-image:url("/sites/all/themes/lynchburg/images/circle_list.png");
 	background-repeat:no-repeat;
@@ -269,7 +264,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	list-style:none;
 	height:16px;
 	width:16px;
-} 
+}
 
 .field-name-field-aside .field-item h2, .field-name-field-aside .field-item h3{
 	font-size:1.333em; /*16px*/
@@ -334,7 +329,7 @@ blockquote {
 	-webkit-border-radius:5px;
 	border-radius:5px;
 	position:relative;
-	behavior: url(js/PIE.htc);	
+	behavior: url(js/PIE.htc);
 }
 .image:hover, .imageTopLeft:hover, .imageTopRight:hover, .imageLeft:hover, .imageRight:hover, .imageCenter:hover{
 	background:#666666;
@@ -386,24 +381,24 @@ blockquote {
 .caption .caption-author a:hover,
 .caption .caption-tags a:hover {
 	color:#a1a1a1;
-} 
+}
 
 .caption .caption-author {
-	margin:0 16px;	
+	margin:0 16px;
 }
 
 .caption-title {
 	margin-top:30px;
 	position:relative;
-} 
+}
 
 .caption_text .caption-title {
 	margin-top:5px;
-} 
+}
 
 .caption-title h2 {
 	margin-bottom:0.75em;
-} 
+}
 
 .caption .caption-title h2 a:hover, .caption .caption-title h3 a:hover {
 	color:#A1A1A1;
@@ -447,8 +442,8 @@ blockquote {
 	margin:0;
 }
 
-/* ----- Columns Styles ----- */	
-	
+/* ----- Columns Styles ----- */
+
 .columns, .columns2, .columns3, .columns4, .columns5, .columns6, .columns7, .columns8, .columns9, .columns10, .columns11, .columns12, .columns13, .columns14, .columns15, .columns16 {
 	width:auto;
 	margin-bottom:2em;
@@ -679,18 +674,18 @@ table.feature_table tbody tr:hover {
 	-moz-transition: all 0.2s linear 0s;
 	-webkit-transition: all 0.2s linear 0s;
 	-o-transition: all 0.2s linear 0s;
-} 
+}
 
 /* --- Table Grey --- */
 table.feature_table.table_grey thead th {
 	/* for non-css3 browsers */
 	background: #d9d9d9;
 	/* for IE */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f1f1f1', endColorstr='#d9d9d9'); 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f1f1f1', endColorstr='#d9d9d9');
 	/* for webkit browsers */
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f1f1f1), to(#d9d9d9), color-stop(.6,#e9e9e9));
 	/* for firefox 3.6+ */
-	background: -moz-linear-gradient(25% 87% 90deg,#d9d9d9, #e9e9e9, #f1f1f1 100%); 	
+	background: -moz-linear-gradient(25% 87% 90deg,#d9d9d9, #e9e9e9, #f1f1f1 100%);
 	/*background-position: 0 0;*/
 }
 table.feature_table.table_grey thead tr th.left_round {
@@ -709,11 +704,11 @@ table.feature_table.table_dark thead th {
 	/* for non-css3 browsers */
 	background: #5a5f63;
 	/* for IE */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#727b82', endColorstr='#323232'); 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#727b82', endColorstr='#323232');
 	/* for webkit browsers */
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#727b82), to(#323232), color-stop(.6,#5a5f63));
 	/* for firefox 3.6+ */
-	background: -moz-linear-gradient(25% 87% 90deg,#323232, #5a5f63, #727b82 100%); 	
+	background: -moz-linear-gradient(25% 87% 90deg,#323232, #5a5f63, #727b82 100%);
 }
 table.feature_table.table_dark thead tr th.left_round {
 	border-left:1px solid #2b2c2c;
@@ -731,11 +726,11 @@ table.feature_table.table_blue thead th {
 	/* for non-css3 browsers */
 	background: #125889;
 	/* for IE */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2187cf', endColorstr='#125889'); 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2187cf', endColorstr='#125889');
 	/* for webkit browsers */
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#2187cf), to(#125889), color-stop(.6,#1b74b0));
 	/* for firefox 3.6+ */
-	background: -moz-linear-gradient(25% 87% 90deg,#125889, #1b74b0, #2187cf 100%); 	
+	background: -moz-linear-gradient(25% 87% 90deg,#125889, #1b74b0, #2187cf 100%);
 	/*background-position: 0 0;*/
 }
 table.feature_table.table_blue thead tr th.left_round {
@@ -744,7 +739,7 @@ table.feature_table.table_blue thead tr th.left_round {
 table.feature_table.table_blue thead tr th.right_round {
 	border-right:1px solid #1369a4;
 }
-/* --- Table Red --- */ 
+/* --- Table Red --- */
 table.feature_table.table_red thead th {
 	/*background-position: 0 -226px;*/
 	font-size:1.333em;/*16px*/
@@ -754,11 +749,11 @@ table.feature_table.table_red thead th {
 	/* for non-css3 browsers */
 	background: #790600;
 	/* for IE */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8f0900', endColorstr='#5a0500'); 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8f0900', endColorstr='#5a0500');
 	/* for webkit browsers */
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#8f0900), to(#5a0500), color-stop(.6,#790600));
 	/* for firefox 3.6+ */
-	background: -moz-linear-gradient(25% 87% 90deg,#5a0500, #790600, #8f0900 100%); 	
+	background: -moz-linear-gradient(25% 87% 90deg,#5a0500, #790600, #8f0900 100%);
 	/*background-position: 0 0;*/
 }
 table.feature_table.table_red thead tr th.left_round {
@@ -791,24 +786,24 @@ table.feature_table.table_red thead tr th.right_round {
 .emphasis_box .emphasis-author a:hover,
 .emphasis_box .emphasis-tags a:hover {
 	color:#a1a1a1;
-} 
+}
 
 .emphasis_box .emphasis-author {
-	margin:0 16px;	
+	margin:0 16px;
 }
 
 .emphasis-title {
 	margin-top:30px;
 	position:relative;
-} 
+}
 
 .emphasis_text .emphasis-title {
 	margin-top:5px;
-} 
+}
 
 .emphasis-title h2 {
 	margin-bottom:0.75em;
-} 
+}
 
 .emphasis-box .emphasis-title h2 a:hover, .emphasis-box .emphasis-title h3 a:hover {
 	color:#A1A1A1;
@@ -863,11 +858,11 @@ select {
 	/* for non-css3 browsers */
 	background: #d9d9d9;
 	/* for IE */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f4f4', endColorstr='#ecebeb'); 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f4f4', endColorstr='#ecebeb');
 	/* for webkit browsers */
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f5f4f4), to(#ecebeb), color-stop(.6,#ecebeb));
 	/* for firefox 3.6+ */
-	background: -moz-linear-gradient(25% 87% 90deg,#ecebeb, #ecebeb, #f5f4f4 100%); 	
+	background: -moz-linear-gradient(25% 87% 90deg,#ecebeb, #ecebeb, #f5f4f4 100%);
 	/*background-position: 0 0;*/
 }
 
@@ -876,31 +871,31 @@ select {
 	/* for non-css3 browsers */
 	background: #e9e9e9;
 	/* for IE */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ecebeb', endColorstr='#f5f4f4'); 
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ecebeb', endColorstr='#f5f4f4');
 	/* for webkit browsers */
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ecebeb), to(#f0f0f0), color-stop(.6,#ecebeb));
 	/* for firefox 3.6+ */
-	background: -moz-linear-gradient(25% 87% 90deg,#f5f4f4, #ecebeb, #ecebeb 100%); 	
+	background: -moz-linear-gradient(25% 87% 90deg,#f5f4f4, #ecebeb, #ecebeb 100%);
 	/*background-position: 0 0;*/
-} 
+}
 
 .info img, .warnings img, .errors img, .success img {
     float:left;
-	margin-right:20px;	
-} 
+	margin-right:20px;
+}
 
 .info p, .warnings p, .errosr p, .success p {
 	padding:0;
 	margin:0;
 	display:table;
 	overflow:hidden;
-} 
+}
 
-.info {color:#3cb4e4;} 
+.info {color:#3cb4e4;}
 
-.warnings {color:#ff9c00;} 
+.warnings {color:#ff9c00;}
 
-.errors {color:#f76565;} 
+.errors {color:#f76565;}
 
 .success {color:#75bc16;}
 
@@ -929,11 +924,11 @@ select {
 
 .small_button_block .button {
 	margin:0 0.5em 1em 0;
-} 
+}
 
 .medium_button_block {
 	margin-top:50px;
-} 
+}
 
 .medium_button_block .button {
 	margin:0 0.5em 1em 0;
@@ -941,11 +936,11 @@ select {
 
 .large_button_block {
 	margin-top:50px;
-} 
+}
 
 .large_button_block .button {
 	margin:0 0.5em 1em 0;
-} 
+}
 
 .button {
     display: inline-block;
@@ -953,7 +948,7 @@ select {
 	cursor:pointer;
 	text-align:center;
     text-decoration: none;
-    font: 12px/100% "Arimo", Arial, Helvetica,sans-serif;
+    font: 12px/100% Arial, Helvetica,sans-serif;
     -moz-border-radius: 0.5em 0.5em 0.5em 0.5em;
 	-webkit-border-radius:0.5em 0.5em 0.5em 0.5em;
 	border-radius: 0.5em 0.5em 0.5em 0.5em;
@@ -977,7 +972,7 @@ select {
 	-moz-box-shadow:none;
 	-webkit-box-shadow:none;
 	box-shadow:none;
-} 
+}
 
 .small {
     font-size:1em;
@@ -1078,8 +1073,8 @@ select {
 	position:relative;
 	behavior: url(js/PIE.htc);
 }
-.button:hover { background: #f3f3f3;} 
-.dark:hover { background: #4d4e4e;} 
+.button:hover { background: #f3f3f3;}
+.dark:hover { background: #4d4e4e;}
 .light:hover { background: #a0b4b9;}
 .red:hover { background: #cb6868;}
 .blue:hover { background: #589dc9;}
@@ -1090,7 +1085,7 @@ select {
 .wp-pagenavi {
 	margin-top:30px;
 	overflow:hidden;
-} 
+}
 
 .wp-pagenavi ul	{
 	margin:0;
@@ -1108,7 +1103,7 @@ select {
 
 .wp-pagenavi li.page {
 	margin-right:13px;
-} 
+}
 
 .wp-pagenavi span.current-page	{
 	display:none;
@@ -1164,7 +1159,7 @@ select {
 	text-decoration:none;
 }
 
-.wp-pagenavi span.current	{ 
+.wp-pagenavi span.current	{
 	font-size:1em;
 	color:#636363;
 	text-shadow:#fdfdfd 1px 1px 0;
@@ -1197,7 +1192,7 @@ select {
 	display:block;
 	height:23px;
 	width:6px
-} 
+}
 /*************************
  *  footer area  top        *
  *************************/
@@ -1221,7 +1216,7 @@ select {
 	width:20px;
 }
 
-/*give*/ 
+/*give*/
 #dhtml_menu-34352 a{
 	background:url(../images/giveIcon.png) no-repeat left;
 	padding-left:25px;
@@ -1235,8 +1230,8 @@ select {
 /*follow us*/
 #dhtml_menu-34355 a{
 	background:url(../images/followIcon.png) no-repeat center;
-	padding-left:30px; 
-	padding-right:40px;  
+	padding-left:30px;
+	padding-right:40px;
 	margin-right:0;
 	text-indent:0px;
 	}
@@ -1248,7 +1243,7 @@ select {
 
 /*news*/
 #dhtml_menu-34354 a{
-	background:url(../images/newsIcon.png) no-repeat center left; 
+	background:url(../images/newsIcon.png) no-repeat center left;
 	border-right:#56585b solid 2px;
 	text-align:right;
 	width:120px;
@@ -1259,7 +1254,7 @@ select {
 
 /*faculty staff*/
 #dhtml_menu-34353 a{
-	background:url(../images/facultyStaffIcon.png) no-repeat center left; 
+	background:url(../images/facultyStaffIcon.png) no-repeat center left;
 	text-align:right;
 	width:168px;
 	text-indent:0px;
@@ -1297,7 +1292,7 @@ footer#section-footer {
 footer#section-footer h1, footer#section-footer h2, footer#section-footer h3, footer#section-footer h4, footer#section-footer h5, footer#section-footer h6 {
 	color:#fff;
 }
- 
+
 footer#section-footer h2 {
 	border-bottom:solid 1px #5b5b5b;
 	font-family: arial, sans-serif;
@@ -1312,7 +1307,7 @@ footer#section-footer ul{
 }
 footer#section-footer li{
 	list-style:none;
-	
+
 }
 footer#section-footer li a{
 	color:#b9b9b9;
@@ -1324,7 +1319,7 @@ footer#section-footer li a:hover{
 }
 
 /*ul.menu li{
-	border: #3F0 solid 1px;	
+	border: #3F0 solid 1px;
 }*/
 
 /*.grid12 {
