--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -1,3 +1,6 @@
 /* This file will hold styles that are loaded using the same media query as the normal grid. */
 
 
+#megamenu-studentlife {
+	margin-right: 330px;
+}
