--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-wide.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-wide.css
@@ -1,1 +1,5 @@
 /* This file will hold styles that are loaded using the same media query as the wide grid. */
+
+#megamenu-studentlife {
+	margin-right: 480px;
+}
