--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -1,6 +1,23 @@
 /* This file will hold styles that are loaded using the same media query as the normal grid. */
 
+body {
+	background: url("/sites/all/themes/lynchburg/images/bg-body-top2.jpg") repeat-x top left;
+}
+
+.section-header {
+	height:142px;
+	margin:0;
+	padding:0;
+	background: transparent url("/sites/all/themes/lynchburg/images/bg-header-arch1.jpg") no-repeat top center;
+}
+
+.zone-menu-wrapper {
+	margin-top: -60px;
+	background:none;
+	filter:none;
+}
 
 #megamenu-studentlife {
 	margin-right: 330px;
 }
+
