--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -3,12 +3,19 @@
 body {
 	background: url("/sites/all/themes/lynchburg/images/bg-body-top2.jpg") repeat-x top left;
 }
+body.front {
+	/* custom homepage background overrides the above default background ^ */
+}
 
 .section-header {
 	height:142px;
 	margin:0;
 	padding:0;
 	background: transparent url("/sites/all/themes/lynchburg/images/bg-header-arch1.jpg") no-repeat top center;
+}
+.front .section-header {
+	/* custom homepage background overrides the above default background ^ */
+	/* also add some more padding here */
 }
 
 .zone-menu-wrapper {
