--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1303,6 +1303,8 @@ footer#section-footer li a:hover {
 }
 */
 
+/* Flickrset */
 .pane-flickrset iframe {
   width: 500px !important;
+  height: 400px !important;
 }
