--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -145,7 +145,7 @@ a:visited {
 	color:#5d4a6b;
 }
 a:hover {
-	color:#a1a1a1 !important;
+	color:#a1a1a1;
 	text-decoration:underline;
 }
 a, a:link, a:visited, a:focus {
@@ -198,11 +198,31 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	padding-top:8px;
 	color:#454545;
 }
-
-#megamenu-undergraduate, #megamenu-graduate,#megamenu-studentlife, #megamenu-alumni, #megamenu-athletics{padding:0px 5px 0 0; margin-left:0;}
-
-
-
+.main-menu .active {
+	text-decoration:underline;
+}
+.main-menu a:hover {
+	color:#454545;
+}
+.main-menu a {
+	margin:1px 1px 0 1px;
+	padding:3px 6px 8px;
+}
+.main-menu a.qtip-hover{
+	-webkit-border-top-right-radius:3px;
+	-webkit-border-top-left-radius: 3px;
+	-moz-border-radius-topleft: 3px;
+	-moz-border-radius-topright: 3px;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+	border:1px solid #ccc;
+	border-bottom:none;
+	margin:0;
+	background:#fff;
+}
+ul.main-menu li {
+	padding:0;
+}
 
 /* ========== MAIN NAV DROPDOWN ========== */
 .qtip {
