--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -276,6 +276,35 @@ ul.main-menu li {
 	list-style:none;
 	padding:10px 40px 0 0;
 }
+
+#megamenu-apply,
+#megamenu-visit {
+	color:#ffffff;
+	position: relative;
+	text-align: left;
+	text-decoration: none;
+	background:transparent url(../images/apply-visit.png) 0 50%;
+	padding: 9px 20px 7px 25px;
+	border:none;
+	margin:0 0 0 -16px;
+	z-index: 99;
+}
+#megamenu-apply:hover,
+#megamenu-visit:hover,
+#megamenu-apply.qtip-hover,
+#megamenu-visit.qtip-hover  {
+	background-position: -200px 50%;
+	background-color:transparent;
+	margin:0 0 0 -16px;
+	border:none;
+	border-radius:0;
+}
+
+.last #megamenu-apply,
+.last #megamenu-visit {
+	/* Because I wasnt sure which one would be last, this allows them to be switched */
+	z-index: 100;
+}
 /* ========== ASIDE & SECONDARY NAV ========== */
 .field-name-field-aside {
 	margin-left:0px;
