--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -158,9 +158,7 @@ p {
 	}
 .lynchburg-main p a:hover, {
 	text-decoration:none;
-	}
-
-
+}
 strong {
 	color:#565656;
 }
@@ -355,12 +353,12 @@ ul.jquerymenu li.parent span.closed  {
 ul.jquerymenu li.parent span.open {
 	background-position:3px -90px;
 }
-.lynchburg-right-sidebar {
+/*.lynchburg-right-sidebar {
 	margin:0px;
 	border-left:#e8e8e8 double 3px;
-	padding:0 0 30px 10px;
+	padding:0 0 30px 0px;
 }
-
+*/
 .lynchburg-left-sidebar{
 	/*border:red solid 1px;*/
 	border-right:#e8e8e8 double 3px;
@@ -387,11 +385,11 @@ ul.jquerymenu li.parent span.open {
 .lynchburg-left-sidebar h2 a:hover {
 	color:#242424
 }
-.lynchburg-right-sidebar ul, .lynchburg-left-sidebar .pane-content ul {
+/*.lynchburg-right-sidebar ul,*/ .lynchburg-left-sidebar .pane-content ul {
 	/*border:red  solid 1px;*/
 	background:url(../images/square_divider.png) repeat-x top;
 }
-.lynchburg-right-sidebar ul li, .lynchburg-left-sidebar .pane-content ul li,  
+/*.lynchburg-right-sidebar ul li,*/ .lynchburg-left-sidebar .pane-content ul li,  
 /*related links*/ 
 .lynchburg-left-sidebar .pane-node-field-links .field-item{
 	background:url(../images/square_divider.png) repeat-x bottom;
