--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -314,7 +314,9 @@ ul.main-menu li {
 	list-style:none;
 	padding:10px 40px 0 0;
 }
-
+#megamenu-athletics{
+	margin-right:20px;
+}
 #megamenu-apply,
 #megamenu-visit {
 	color:#ffffff;
@@ -324,7 +326,7 @@ ul.main-menu li {
 	background:transparent url(../images/apply-visit.png) 0 50%;
 	padding: 9px 20px 7px 25px;
 	border:none;
-	margin:0 0 0 -16px;
+	margin:0 0 0 -14px;
 	z-index: 99;
 }
 #megamenu-apply:hover,
@@ -333,9 +335,10 @@ ul.main-menu li {
 #megamenu-visit.qtip-hover  {
 	background-position: -200px 50%;
 	background-color:transparent;
-	margin:0 0 0 -16px;
+	margin:0 0 0 -14px;
 	border:none;
 	border-radius:0;
+	color:#000;
 }
 
 .last #megamenu-apply,
@@ -365,9 +368,6 @@ ul.jquerymenu li.parent span.open {
 	margin:0px;
 	padding:0 10px 30px 0;
 }*/
-
-
-
 .lynchburg-left-sidebar h2 a:link {
 	font-size:15px;
 	background:none;
@@ -391,15 +391,6 @@ ul.jquerymenu li.parent span.open {
 	list-style:none;
 	margin:0;
 }
-/*related links*/ 
-.pane-node-field-links li {
-	padding:1em 0 1em 0;
-}
-.pane-node-field-links h2 {
-	margin-bottom:.5em;
-	margin-top:2em;
-}
-
 .lynchburg-right-sidebar ul a:link, .lynchburg-left-sidebar .pane-content ul a:link {
 	margin-left:6px;
 	}
