--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -93,18 +93,22 @@ ol.type-2 {
 }
 /* ========== UNORDERED LISTS ========== */
 ul.unordered li {
+	list-style:none;
 	padding-left: 2.1em;
 	background-position: 0 0.6em;
 	background-repeat: no-repeat;
 }
 ul.unordered.type-1 li {
 	background-image: url(../images/tick.png);
+	background-repeat: no-repeat;
 }
 ul.unordered.type-2 li {
 	background-image: url(../images/arrow_state_blue_right.png);
+	background-repeat: no-repeat;
 }
 ul.unordered.type-3 li {
 	background-image: url(../images/media_controls_forward_small.png);
+	background-repeat: no-repeat;
 }
 ul.unordered.type-4 li {
 	background-image: none;
@@ -368,24 +372,15 @@ ul.jquerymenu li.parent span.open {
 	margin:0px;
 	padding:0 10px 30px 0;
 }*/
-.lynchburg-left-sidebar h2 a:link {
-	font-size:15px;
-	background:none;
-	line-height:20px;
-	margin-bottom:.75em;
-	color:#242424
-}
-.lynchburg-left-sidebar h2 a:hover {
-	color:#242424
-}
+
 .lynchburg-right-sidebar ul, .lynchburg-left-sidebar .pane-content ul {
 	/*border:red  solid 1px;*/
 	background:url(../images/square_divider.png) repeat-x top;
+	padding-bottom:24px;
 }
 .lynchburg-right-sidebar ul li, .lynchburg-left-sidebar .pane-content ul li,  
 .lynchburg-left-sidebar .pane-node-field-links .field-item{
 	background:url(../images/square_divider.png) repeat-x bottom;
-	/*border-bottom:#c3c3c3  dotted 1.25px;*/
 	padding:0.9em 4px 0.9em 1.5em;
 	position:relative;
 	list-style:none;
@@ -412,20 +407,6 @@ ul.jquerymenu li.parent span.open {
 .lynchburg-right-sidebar li:hover:after, .lynchburg-right-sidebar li .after:hover, .lynchburg-left-sidebar .pane-content li:hover:after, .lynchburg-left-sidebar .pane-content li .after:hover {
 	background-position:0 0;
 }
-.lynchburg-left-sidebar h2, .lynchburg-right-sidebar h2, {
-	font-size:15px; 
-	line-height:19px;
-	margin-bottom:.5em;
-	color:#242424;
-}
-.lynchburg-left-sidebar .pane-title, h3, .lynchburg-right-sidebar .pane-title h3 {
-	color:#900900;
-}
-.lynchburg-left-sidebar h4, .lynchburg-right-sidebar h4 {
-	font-size:14px;
-	line-height:18px;
-	margin-bottom:0.2em;
-}
 li.parent.last.open ul, li.parent.open ul, li.parent.open li {
 	background-image:none;
 	line-height:15px;
@@ -435,6 +416,32 @@ li.parent.last.open ul, li.parent.open ul, li.parent.open li {
 li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open ul li:after, li.parent.open ul li .after {
 	background-image:none;
 }
+.lynchburg-left-sidebar h2 a {
+	font-size:15px;
+	background:none;
+	line-height:20px;
+	margin-bottom:.75em;
+	color:#242424;
+}
+.lynchburg-left-sidebar h2 a:hover {
+	color:#242424;
+	text-decoration:underline;
+}
+.lynchburg-left-sidebar h2, .lynchburg-right-sidebar h2 {
+	font-size:15px; 
+	line-height:19px;
+	margin-bottom:.5em;
+	color:#242424;
+}
+.lynchburg-left-sidebar h3, .lynchburg-right-sidebar h3 {
+	color:#900900;
+}
+.lynchburg-left-sidebar h4, .lynchburg-right-sidebar h4 {
+	font-size:14px;
+	line-height:18px;
+	margin-bottom:0.2em;
+}
+
 /* ========== BLOCKQUOTES ========== */
 blockquote {
 	font-family: Georgia, "Times New Roman", Times, serif;
